--- a/recipes-custom/systemd/files/00-create-volatile.conf
+++ b/recipes-custom/systemd/files/00-create-volatile.conf
@@ -7,3 +7,4 @@ L! /var/tuxbox/ - - - - /etc/neutrino/
 L! /usr/bin/doscam - - - - /etc/neutrino/bin/doscam
 L! /usr/bin/oscam - - - - /etc/neutrino/bin/oscam
 L! /usr/bin/gbox - - - - /etc/neutrino/bin/gbox
+L! /usr/bin/ciplushelper - - - - /etc/neutrino/bin/ciplushelper
