logind: dont control suspend and hibernate Keys

--- a/recipes-custom/systemd/files/logind.conf
+++ b/recipes-custom/systemd/files/logind.conf
@@ -19,8 +19,8 @@
 #KillExcludeUsers=root
 #InhibitDelayMaxSec=5
 HandlePowerKey=ignore
-#HandleSuspendKey=suspend
-#HandleHibernateKey=hibernate
+HandleSuspendKey=ignore
+HandleHibernateKey=ignore
 #HandleLidSwitch=suspend
 #HandleLidSwitchDocked=ignore
 #PowerKeyIgnoreInhibited=no
