--- a/recipes-custom/systemd/files/00-create-volatile.conf
+++ b/recipes-custom/systemd/files/00-create-volatile.conf
@@ -3,8 +3,9 @@ d /var/volatile/log - - - -
 d /var/volatile/tmp 1777 - -
 f /etc/resolv.conf 0644 - -
 f /etc/network/interfaces 0644 - -
-L! /var/tuxbox/ - - - - /etc/neutrino/
+L! /var/tuxbox/config - - - - /etc/neutrino/config
 L! /usr/bin/doscam - - - - /etc/neutrino/bin/doscam
 L! /usr/bin/oscam - - - - /etc/neutrino/bin/oscam
 L! /usr/bin/gbox - - - - /etc/neutrino/bin/gbox
 L! /usr/bin/ciplushelper - - - - /etc/neutrino/bin/ciplushelper
+L! /media/sda1 - - - - /media/HDD
