--- a/recipes-custom/systemd/files/00-create-volatile.conf
+++ b/recipes-custom/systemd/files/00-create-volatile.conf
@@ -7,5 +7,5 @@ L! /var/tuxbox/config - - - - /etc/neutrino/config
 L! /usr/bin/doscam - - - - /etc/neutrino/bin/doscam
 L! /usr/bin/oscam - - - - /etc/neutrino/bin/oscam
 L! /usr/bin/gbox - - - - /etc/neutrino/bin/gbox
-L! /usr/bin/ciplushelper - - - - /etc/neutrino/bin/ciplushelper
+L! /usr/bin/CCcam - - - - /etc/neutrino/bin/CCcam
 L! /media/sda1 - - - - /media/HDD
