logind: enable persistent user instance this should prevent multiplexers from killing running processes if user gets logged out

--- a/recipes-custom/systemd/files/logind.conf
+++ b/recipes-custom/systemd/files/logind.conf
@@ -14,9 +14,9 @@
 [Login]
 #NAutoVTs=6
 #ReserveVT=6
-#KillUserProcesses=yes
+KillUserProcesses=no
 #KillOnlyUsers=
-#KillExcludeUsers=root
+KillExcludeUsers=
 #InhibitDelayMaxSec=5
 HandlePowerKey=ignore
 HandleSuspendKey=ignore
