layer.conf: this layer is compatible with openembedded thud

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,4 +1,4 @@
-LAYERSERIES_COMPAT_hd51 = "sumo"
+LAYERSERIES_COMPAT_hd51 = "thud"
 
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
