use lowercase letters for mountpoints

--- a/recipes-custom/systemd/files/00-create-volatile.conf
+++ b/recipes-custom/systemd/files/00-create-volatile.conf
@@ -4,4 +4,4 @@ d /var/volatile/tmp 1777 - -
 f /etc/resolv.conf 0644 - -
 f /etc/network/interfaces 0644 - -
 L! /var/tuxbox/config - - - - /etc/neutrino/config
-L! /media/sda1 - - - - /media/HDD
+L! /media/sda1 - - - - /media/hdd
