systemd: install logind.conf within systemd-conf Package

--- a/recipes-custom/systemd/files/logind.conf
+++ b/recipes-custom/systemd/files/logind.conf
@@ -22,6 +22,7 @@ HandlePowerKey=ignore
 HandleSuspendKey=ignore
 HandleHibernateKey=ignore
 #HandleLidSwitch=suspend
+#HandleLidSwitchExternalPower=suspend
 #HandleLidSwitchDocked=ignore
 #PowerKeyIgnoreInhibited=no
 #SuspendKeyIgnoreInhibited=no
@@ -34,4 +35,3 @@ HandleHibernateKey=ignore
 #RemoveIPC=yes
 #InhibitorsMax=8192
 #SessionsMax=8192
-#UserTasksMax=33%
