--- a/conf/machine/hd51.conf
+++ b/conf/machine/hd51.conf
@@ -13,3 +13,19 @@ MACHINE_FEATURES = "apm usbhost keyboard vfat ext2 wifi"
 MACHINE_EXTRA_RRECOMMENDS += " \
 	kernel-modules \
 "
+
+GOVERSION ?= "1.11%"
+
+##preferred versions
+PREFERRED_VERSION_linux-libc-headers = "4.10"
+PREFERRED_VERSION_nativesdk-linux-libc-headers = "4.10"
+
+##preferred providers
+PREFERRED_PROVIDER_virtual/kernel = "linux-gfutures"
+PREFERRED_PROVIDER_virtual/neutrino = "neutrino-mp-ax51"
+PREFFERED_PROVIDER_virtual/libstb-hal = "libstb-hal"
+PREFFERED_PROVIDER_virtual/dvb-driver = "gfutures-dvb-modules-hd51"
+PREFFERED_PROVIDER_virtual/screengrabber = "grab"
+PREFERRED_PROVIDER_virtual/libgles2 = "hd-v3ddriver-hd51"
+PREFERRED_PROVIDER_virtual/egl = "hd-v3ddriver-hd51"
+
