--- a/conf/machine/hd51.conf
+++ b/conf/machine/hd51.conf
@@ -22,7 +22,7 @@ PREFERRED_VERSION_nativesdk-linux-libc-headers = "4.10"
 
 ##preferred providers
 PREFERRED_PROVIDER_virtual/kernel = "linux-gfutures"
-PREFERRED_PROVIDER_virtual/neutrino = "neutrino-mp-ax51"
+PREFERRED_PROVIDER_virtual/neutrino = "neutrino-mp"
 PREFFERED_PROVIDER_virtual/libstb-hal = "libstb-hal"
 PREFFERED_PROVIDER_virtual/dvb-driver = "gfutures-dvb-modules-hd51"
 PREFFERED_PROVIDER_virtual/screengrabber = "grab"
