00-create-volatile.conf: edit

--- a/recipes-custom/systemd/files/00-create-volatile.conf
+++ b/recipes-custom/systemd/files/00-create-volatile.conf
@@ -1,8 +1,9 @@
-d /dev/fb - - - - 
+d /dev/fb - - - -
 d /var/volatile/log - - - -
 d /var/volatile/tmp 1777 - -
 f /etc/resolv.conf 0644 - -
 f /etc/network/interfaces 0644 - -
 L! /var/tuxbox/config - - - - /etc/neutrino/config
 L! /media/sda1 - - - - /media/hdd
-L! /usr/share - - - - /share
+L! /share - - - - /usr/share
+L! /home/root/.zshrc - - - - /etc/zsh/zshrc
