systemd: add link

--- a/recipes-custom/systemd/files/00-create-volatile.conf
+++ b/recipes-custom/systemd/files/00-create-volatile.conf
@@ -4,6 +4,7 @@ d /var/volatile/tmp 1777 - -
 f /etc/resolv.conf 0644 - -
 f /etc/network/interfaces 0644 - -
 L! /var/tuxbox/config - - - - /etc/neutrino/config
+L! /var/keys - - - - /etc/keys
 L! /media/sda1 - - - - /media/hdd
 L! /share - - - - /usr/share
 L! /home/root/.zshrc - - - - /etc/zsh/zshrc
