--- a/example_neutrino/local.conf.sample
+++ b/example_neutrino/local.conf.sample
@@ -62,7 +62,8 @@ TMDB_DEV_KEY = ""
 SHOUTCAST_DEV_KEY = ""
 # put your omdb_api_key here, if you want to query the imdb database
 OMDB_API_KEY = ""
-
+# put your darksky api key here, if you want to use weather service 
+WEATHER_DEV_KEY = ""
 
 # Put additional packages that should be packaged into your image. Separated with a whitespace. 
 IMAGE_INSTALL_append += ""
