layer.conf: update to warrior

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,4 +1,4 @@
-LAYERSERIES_COMPAT_hd51 = "thud"
+LAYERSERIES_COMPAT_hd51 = "warrior"
 
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
