create /var/etc symlink

--- a/recipes-custom/systemd/files/00-create-volatile.conf
+++ b/recipes-custom/systemd/files/00-create-volatile.conf
@@ -5,6 +5,7 @@ f /etc/resolv.conf 0644 - -
 f /etc/network/interfaces 0644 - -
 L! /var/tuxbox/config - - - - /etc/neutrino/config
 L! /var/keys - - - - /etc/keys
+L! /var/etc - - - - /etc
 L! /media/sda1 - - - - /media/hdd
 L! /share - - - - /usr/share
 L! /home/root/.zshrc - - - - /etc/zsh/zshrc
