volatile: create symlink /mnt/linuxrootfs1/linuxrootfs1 > /mnt/userdata/linuxrootfs1

--- a/recipes-custom/systemd/files/00-create-volatile.conf
+++ b/recipes-custom/systemd/files/00-create-volatile.conf
@@ -9,3 +9,6 @@ L! /var/etc - - - - /etc
 L! /media/sda1 - - - - /media/hdd
 L! /share - - - - /usr/share
 L! /home/root/.zshrc - - - - /etc/zsh/zshrc
+L! /mnt/userdata/linuxrootfs1 - - - - /mnt/linuxrootfs1/linuxrootfs1
+
+
