add drivers to MACHINE_ESSENTIAL_EXTRA_RDEPENDS

--- a/conf/machine/hd51.conf
+++ b/conf/machine/hd51.conf
@@ -10,6 +10,7 @@ MACHINE_KERNEL_PR = "r0"
 
 MACHINE_FEATURES = "apm usbhost keyboard vfat ext2 wifi"
 
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "gfutures-dvb-modules-${MACHINE}"
 MACHINE_EXTRA_RRECOMMENDS += " \
 	kernel-modules \
 "
