--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,4 +1,4 @@
-LAYERSERIES_COMPAT_hd51 = "zeus"
+LAYERSERIES_COMPAT_hd51 = "dunfell"
 
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
