imagename: replace IMAGENAME with IMAGE_NAME
IMAGENAME is not explicit required. This is handled by the
IMAGE_BASENAME variable. The target name "neutrino-image" and the
default name "neutrino-image" are untouched.

--- a/example_neutrino/local.conf.sample
+++ b/example_neutrino/local.conf.sample
@@ -44,8 +44,8 @@ MACHINE ?= "hd51"
 
 ### Image Settings
 
-# What image to build ?
-IMAGENAME = "neutrino-image"
+# Name of image, default is neutrino-image
+#IMAGE_BASENAME = "neutrino-image"
 
 # Could be set to small
 IMAGESIZE = "normal"
