fix build with qt 5.15

--- a/conf/machine/hd51.conf
+++ b/conf/machine/hd51.conf
@@ -24,6 +24,7 @@ PREFERRED_PROVIDER_virtual/neutrino = "neutrino-mp"
 PREFFERED_PROVIDER_virtual/libstb-hal = "libstb-hal"
 PREFFERED_PROVIDER_virtual/dvb-driver = "gfutures-dvb-modules-hd51"
 PREFFERED_PROVIDER_virtual/screengrabber = "grab"
+PREFERRED_PROVIDER_virtual/libgles1 = "hd-v3ddriver-hd51"
 PREFERRED_PROVIDER_virtual/libgles2 = "hd-v3ddriver-hd51"
 PREFERRED_PROVIDER_virtual/egl = "hd-v3ddriver-hd51"
 
