--- a/conf/machine/hd51.conf
+++ b/conf/machine/hd51.conf
@@ -6,46 +6,31 @@ require conf/machine/include/gfutures-arm.inc
 
 MACHINE_FEATURES += "apm usbhost keyboard vfat ext2 wifi"
 
-MACHINE_BUILD = "hd51"
-MACHINE_BRAND = "AX/Mut@nt 4K"
-MACHINE_NAME = "HD51"
-IMAGEDIR = "${MACHINE_BUILD}"
-
-MACHINE_KERNEL_PR = "r0"
-
 MTD_BOOTFS = "mmcblk0p1"
+MTD_ROOTFS = "mmcblk0p3"
+MTD_KERNEL = "mmcblk0p2"
 KERNEL_FILE = "kernel.bin"
 ROOTFS_FILE = "rootfs.tar.bz2"
 MTD_BLACK  = "mmcblk0"
 
-#EXTRA_IMAGEDEPENDS += "\
-#    ${@bb.utils.contains('MACHINEBUILD', 'bre2ze4k', ' enigma2-plugin-systemplugins-vfdcontrol' , '', d)} \
-#    ${@bb.utils.contains('MACHINEBUILD', 'axultra', ' enigma2-plugin-systemplugins-vfdcontrol' , '', d)} \
-#    "
-
-#MACHINE_EXTRA_RDEPENDS += "\
-#    ${@bb.utils.contains('MACHINEBUILD', 'bre2ze4k', ' enigma2-plugin-systemplugins-vfdcontrol' , '', d)} \
-#    ${@bb.utils.contains('MACHINEBUILD', 'axultra', ' enigma2-plugin-systemplugins-vfdcontrol' , '', d)} \
-#    "
 #BBMASK = "meta-vuplus/recipes-graphics/"
 #BBMASK += "meta-fulan/recipes-graphics/"
 #BBMASK += "meta-vuplus/recipes-webkit/"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "gfutures-dvb-modules-hd51"
+MACHINEBUILD ?= "ax51"
+
 MACHINE_EXTRA_RRECOMMENDS += " \
 	kernel-modules \
 "
-##preferred versions
+## preferred versions
 PREFERRED_VERSION_linux-libc-headers = "4.10"
 PREFERRED_VERSION_nativesdk-linux-libc-headers = "4.10"
 
-##preferred providers
+## preferred providers
 PREFERRED_PROVIDER_virtual/kernel = "linux-gfutures"
+PREFFERED_PROVIDER_virtual/dvb-driver = "gfutures-dvb-modules-hd51"
 PREFERRED_PROVIDER_virtual/neutrino = "neutrino-mp"
 PREFFERED_PROVIDER_virtual/libstb-hal = "libstb-hal"
-PREFFERED_PROVIDER_virtual/dvb-driver = "gfutures-dvb-modules-hd51"
 PREFFERED_PROVIDER_virtual/screengrabber = "grab"
-PREFERRED_PROVIDER_virtual/libgles1 = "hd-v3ddriver-hd51"
-PREFERRED_PROVIDER_virtual/libgles2 = "hd-v3ddriver-hd51"
-PREFERRED_PROVIDER_virtual/egl = "hd-v3ddriver-hd51"
+
 
