layer.conf: remove license path
not required. already defined within meta-neutrino

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,5 +13,5 @@ LAYERSERIES_COMPAT_gfutures-layer = "gatesgarth"
 
 # Additional license settings
 LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
-LICENSE_PATH += "${YOCTO_BASEDIR}/meta-neutrino/custom-licenses"
+#LICENSE_PATH += "${YOCTO_BASEDIR}/meta-neutrino/custom-licenses"
 LICENSE_FLAGS_WHITELIST = "commercial"
